--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </tr>
                 <tr>
                     <td align="center">2017 - 2018</td>
-                    <td>Darma Yudha Student Council: Coordinator of Division 6; Creativity, Skillfullness and Entrepreneurship</td>
+                    <td>Darma Yudha Student Council: Coordinator of Creativity, Skillfullness and Entrepreneurship Division</td>
                 </tr>
                 <tr>
                     <td align="center">2016 - 2017</td>
