--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     
     <body>
         <section class="header">
-            <div class="header-wrap">
+            <div class="header-bg">
                 <hr class="top-hr">
+                <img class="decor1" src="images/geometric-g2a4ae05e8_1280.jpg" alt="decor1">
                 <img class="prof-pic" src="images/self-pic.jpg" alt="profile-pic">
                 <hr class="bottom-hr">
                 <div class="header-name">Jeffrey Antonius Saputra</div>
@@ -29,8 +30,18 @@
         </section>
 
         <section class="middle">
-            <div class="about-wrap">
+            <div class="about-bg">
+                <div class="about">
 
+                </div>
+                <h2 class="slide-title">Here's some of the things that I've done</h2>
+                <div class="certi-show">
+                    <img class="slidesimg" src="images/THM-9U8PKGG8XY.png" alt="TryHackMe Pre Security Learning Path">
+                    <img class="slidesimg" src="images/THM-PTKS1QTCY8.png" alt="TryHackMe Complete Beginner Learning Path">
+                    <img class="slidesimg" src="images/THM-TBFV8POJRJ.png" alt="TryHackMe Web Fundamentals Learning Path">
+                    <img class="slidesimg" src="images/cert-22854022-1073.png" alt="SoloLearn Python Core">
+                    <script src="js/slideshow.js"></script>
+                </div>
             </div>
         </section>
     </body>
