--- a/index.html
+++ b/index.html
@@ -4,22 +4,29 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="Keywords" content="Jeffrey Antonius Saputra binus cyber security pentester bina nusantara personal site website">
+        <!-- Icon -->
+        <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Oswald:wght@300&family=Ubuntu:wght@300;500&display=swap" rel="stylesheet">
+        <!-- CSS -->
         <link rel="stylesheet" href="css/styles.css">
-        <title>A Beginner's Personal Site</title>
+        <title>A Beginner's Personal Site</title>   
     </head>
     
     <body>
         <section class="header">
             <div class="header-bg">
                 <hr class="top-hr">
-                <img class="decor1" src="images/geometric-g2a4ae05e8_1280.jpg" alt="decor1">
                 <img class="prof-pic" src="images/self-pic.jpg" alt="profile-pic">
                 <hr class="bottom-hr">
                 <div class="header-name">Jeffrey Antonius Saputra</div>
                 <div class="header-desc">Welcome to my website that I make as a part of my self development!</div>
-                <a href="https://tryhackme.com/p/th0m" target="_blank">
-                    <img class="thm-badge" src="https://tryhackme-badges.s3.amazonaws.com/th0m.png" alt="TryHackMe">
-                </a>
+                <span class="thm-badge">
+                    <script src="https://tryhackme.com/badge/337358"></script>
+                </span>
                 <a href="https://www.linkedin.com/in/jeffrey-antonius" target="_blank">
                     <img class="linkedin" src="images/linkedin-logo-png-1825.png" alt="LinkedIn">
                 </a>
@@ -31,15 +38,40 @@
 
         <section class="middle">
             <div class="about-bg">
-                <div class="about">
-
+                <h2 class="about-title">About Me</h2>
+                <div class="about-outerbox">
+                    <div class="about-innerbox">
+                        <h1>
+                            Hey! I'm Jeffrey, a cyber security student in BINUS University @Kemanggisan, and I am
+                            currently in my third year of university.
+                        </h1>
+                        <p>
+                            I am able to work in teams and communicate well with my peers. Based on my 3 years of 
+                            organizational experience (High School's Student Council and BINUS Square Student Committee), I performed
+                            well under pressure and I found joy in working with my team back then.
+                            <br><br>
+                            I love cats. What I also do love is learning about <strong>cyber security</strong> and 
+                            <strong>the mystery of the cosmos.</strong> I was introduced to <em>TryHackMe</em> and 
+                            <em>HackTheBox</em> about two years ago and I've been trying to explore and learn there 
+                            ever since.
+                            <br><br>
+                            I'm currently aiming for eJPT, OSCP, OSWE as my future certifications and I will
+                            <strong>try harder&trade;</strong> until I do amazingly well in the industry that I'll 
+                            get a call from TED Conferences to come and talk as one of their speaker.
+                            <br><br>
+                            There are numerous ways on how to reach me. You can contact me via LinkedIn, Instagram,
+                            or my email antonius.jeffrey01@gmail.com
+                            <br><br>
+                        </p>
+                        
+                    </div>
                 </div>
                 <h2 class="slide-title">Here's some of the things that I've done</h2>
                 <div class="certi-show">
                     <img class="slidesimg" src="images/THM-9U8PKGG8XY.png" alt="TryHackMe Pre Security Learning Path">
                     <img class="slidesimg" src="images/THM-PTKS1QTCY8.png" alt="TryHackMe Complete Beginner Learning Path">
                     <img class="slidesimg" src="images/THM-TBFV8POJRJ.png" alt="TryHackMe Web Fundamentals Learning Path">
-                    <img class="slidesimg" src="images/cert-22854022-1073.png" alt="SoloLearn Python Core">
+                    <img class="slidesimg" src="images/cert-22854022-1073.png" alt="SoloLearn Python Core">   
                     <script src="js/slideshow.js"></script>
                 </div>
             </div>
