--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <br><br>
                             I'm currently aiming for eJPT, OSCP, OSWE as my future certifications and I will
                             <strong>try harder&trade;</strong> until I do amazingly well in the industry that I'll 
-                            get a call from TED Conferences to come and talk as one of their speaker.
+                            get a call from TED Conferences to come and talk as one of their speakers.
                             <br><br>
                             There are numerous ways on how to reach me. You can contact me via LinkedIn, Instagram,
                             or my email antonius.jeffrey01@gmail.com
