Added writeup image and modify the spacing

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
                     <script src="https://tryhackme.com/badge/337358"></script>
                 </span>
                 <a href="https://www.linkedin.com/in/jeffrey-antonius" target="_blank">
-                    <img class="linkedin" src="images/linkedin-logo-png-1825.png" alt="LinkedIn">
+                    <img class="linkedin" src="images/linkedin-logo.png" alt="LinkedIn">
                 </a>
-                <a href="https://www.instagram.com/antoniusjeffrey" target="_blank">
-                    <img class="instagram" src="images/logo-ig-png-instagram-logo-camel-productions-website-25.png" alt="Instagram">
+                <a href="https://www.instagram.com/antoniusjeffrey/" target="_blank">
+                    <img class="instagram" src="images/ig-logo.png" alt="Instagram">
+                </a>
+                <a href="https://th0m.medium.com/" target="_blank">
+                    <img class="writeups" src="images/WRITEUPS.png" alt="Writeups">
                 </a>
             </div>
         </section>
@@ -57,7 +60,7 @@
                             <br><br>
                             I'm currently aiming for eJPT, OSCP, OSWE as my future certifications and I will
                             <strong>try harder&trade;</strong> until I do amazingly well in the industry that I'll 
-                            get a call from TED Conferences to come and talk as one of their speakers.
+                            get a call from TED Conferences to come and talk as one of their speaker.
                             <br><br>
                             There are numerous ways on how to reach me. You can contact me via LinkedIn, Instagram,
                             or my email antonius.jeffrey01@gmail.com
@@ -68,10 +71,11 @@
                 </div>
                 <h2 class="slide-title">Here's some of the things that I've done</h2>
                 <div class="certi-show">
+                    <img class="slidesimg" src="images/cert-22854022-1073.png" alt="SoloLearn Python Core">
                     <img class="slidesimg" src="images/THM-9U8PKGG8XY.png" alt="TryHackMe Pre Security Learning Path">
                     <img class="slidesimg" src="images/THM-PTKS1QTCY8.png" alt="TryHackMe Complete Beginner Learning Path">
                     <img class="slidesimg" src="images/THM-TBFV8POJRJ.png" alt="TryHackMe Web Fundamentals Learning Path">
-                    <img class="slidesimg" src="images/cert-22854022-1073.png" alt="SoloLearn Python Core">   
+                    <img class="slidesimg" src="images/THM-OX5649OQIN.png" alt="TryHackMe Jr Penetration Tester Learning Path">
                     <script src="js/slideshow.js"></script>
                 </div>
             </div>
